@@ -1253,8 +1253,7 @@ thread_db_open (struct gdbserv *serv, int pid)
   if (ret != TD_OK)
     {
       if (thread_db_noisy)
-	fprintf (stderr, "< -- failed, thread_agent = 0x%08x>\n", 
-		 (long) thread_agent);
+	fprintf (stderr, "< -- failed, thread_agent = %p>\n", thread_agent);
       
       return -1;		/* failure */
     }
@@ -1967,7 +1966,7 @@ wait_all_threads (struct child_process *process)
 	    else
 	      {
 		if (thread_db_noisy)
-		  fprintf (stderr, "<wait_all_threads: stash sig %d for %d at 0x%08x>\n",
+		  fprintf (stderr, "<wait_all_threads: stash sig %d for %d at 0x%08lx>\n",
 			   stopsig, thread->ti.ti_lid,
 			   (unsigned long) debug_get_pc (process->serv,
 							 thread->ti.ti_lid));
@@ -2358,7 +2357,8 @@ thread_db_check_child_state (struct child_process *process)
 	     bad from the point of view of synchronization. */
 	  handle_waitstatus (process, w);
 	  if (thread_db_noisy)
-	    fprintf (stderr, "\n<check_child_state: %d got '%c' - %d at 0x%08x>\n", 
+	    fprintf (stderr,
+		     "\n<check_child_state: %d got '%c' - %d at 0x%08lx>\n", 
 		     process->pid, process->stop_status, process->stop_signal,
 		     (unsigned long) debug_get_pc (process->serv, process->pid));
 	  /* It shouldn't hurt to call this twice.  But if there are a
@@ -2524,8 +2524,8 @@ thread_db_get_thread_reg (struct gdbserv *serv,
     }
   else if (ret != TD_OK)
     {
-      fprintf (stderr, "<<< ERROR get_thread_reg map_id2thr %d >>>\n",
-	       thread->ti.ti_tid);
+      fprintf (stderr, "<<< ERROR get_thread_reg map_id2thr %lu >>>\n",
+	       (unsigned long) thread->ti.ti_tid);
       return -1;	/* fail */
     }
 
@@ -2540,8 +2540,8 @@ thread_db_get_thread_reg (struct gdbserv *serv,
       /* Now extract the register from the fpregset. */
       if (reg_from_fpregset (serv, reg, regnum, &fpregset) < 0)
 	{
-	  fprintf (stderr, "<<< ERROR reg_from_fpregset %d %d>>>\n",
-		   thread->ti.ti_tid, regnum);
+	  fprintf (stderr, "<<< ERROR reg_from_fpregset %lu %d>>>\n",
+		   (unsigned long) thread->ti.ti_tid, regnum);
 	  return -1;
 	}
     }
@@ -2580,8 +2580,8 @@ thread_db_get_thread_reg (struct gdbserv *serv,
       /* Now extract the register from the extended regset.  */
       if (reg_from_xregset (serv, reg, regnum, xregset) < 0)
 	{
-	  fprintf (stderr, "<<< ERROR reg_from_xregset %d %d>>>\n",
-		   thread->ti.ti_tid, regnum);
+	  fprintf (stderr, "<<< ERROR reg_from_xregset %lu %d>>>\n",
+		   (unsigned long) thread->ti.ti_tid, regnum);
 	  return -1;
 	}
     }
@@ -2589,15 +2589,16 @@ thread_db_get_thread_reg (struct gdbserv *serv,
     {
       if (thread_db_getgregs (&thread_handle, gregset) != TD_OK)
 	{
-	  fprintf (stderr, "<<< ERROR get_thread_reg td_thr_getgregs %d >>>\n",
-		   thread->ti.ti_tid);
+	  fprintf (stderr,
+		   "<<< ERROR get_thread_reg td_thr_getgregs %lu >>>\n",
+		   (unsigned long) thread->ti.ti_tid);
 	  return -1;	/* fail */
 	}
       /* Now extract the requested register from the gregset. */
       if (reg_from_gregset (serv, reg, regnum, gregset) < 0)
 	{
-	  fprintf (stderr, "<<< ERROR reg_from_gregset %d %d>>>\n", 
-		   thread->ti.ti_tid, regnum);
+	  fprintf (stderr, "<<< ERROR reg_from_gregset %lu %d>>>\n", 
+		   (unsigned long) thread->ti.ti_tid, regnum);
 	  return -1;	/* fail */
 	}
     }
@@ -2661,8 +2662,8 @@ thread_db_set_thread_reg (struct gdbserv *serv,
     }
   else if (ret != TD_OK)
     {
-      fprintf (stderr, "<<< ERROR set_thread_reg map_id2thr %d >>>\n",
-	       thread->ti.ti_tid);
+      fprintf (stderr, "<<< ERROR set_thread_reg map_id2thr %lu >>>\n",
+	       (unsigned long) thread->ti.ti_tid);
       return -1;	/* fail */
     }
 
@@ -2679,15 +2680,16 @@ thread_db_set_thread_reg (struct gdbserv *serv,
       /* Now write the new reg value into the fpregset. */
       if (reg_to_fpregset (serv, reg, regnum, &fpregset) < 0)
 	{
-	  fprintf (stderr, "<<< ERROR reg_to_fpregset %d %d >>>\n",
-		   thread->ti.ti_tid, regnum);
+	  fprintf (stderr, "<<< ERROR reg_to_fpregset %lu %d >>>\n",
+		   (unsigned long) thread->ti.ti_tid, regnum);
 	  return -1;	/* fail */
 	}
       /* Now write the fpregset back to the child. */
       if (thread_db_setfpregs (&thread_handle, &fpregset) != TD_OK)
 	{
-	  fprintf (stderr, "<<< ERROR set_thread_reg td_thr_setfpregs %d>>>\n",
-		   thread->ti.ti_tid);
+	  fprintf (stderr,
+		   "<<< ERROR set_thread_reg td_thr_setfpregs %lu>>>\n",
+		   (unsigned long) thread->ti.ti_tid);
 	  return -1;	/* fail */
 	}
     }
@@ -2726,15 +2728,16 @@ thread_db_set_thread_reg (struct gdbserv *serv,
       /* Now write the new reg value into the extended regset. */
       if (reg_to_xregset (serv, reg, regnum, xregset) < 0)
 	{
-	  fprintf (stderr, "<<< ERROR reg_to_xregset %d %d >>>\n", 
-		   thread->ti.ti_tid, regnum);
+	  fprintf (stderr, "<<< ERROR reg_to_xregset %lu %d >>>\n", 
+		   (unsigned long) thread->ti.ti_tid, regnum);
 	  return -1;	/* fail */
 	}
       /* Now write the extended regset back to the child. */
       if (td_thr_setxregs_p (&thread_handle, gregset) != TD_OK)
 	{
-	  fprintf (stderr, "<<< ERROR set_thread_reg td_thr_setxregs %d >>>\n",
-		   thread->ti.ti_tid);
+	  fprintf (stderr,
+		   "<<< ERROR set_thread_reg td_thr_setxregs %lu >>>\n",
+		   (unsigned long) thread->ti.ti_tid);
 	  return -1;	/* fail */
 	}
     }
@@ -2743,22 +2746,24 @@ thread_db_set_thread_reg (struct gdbserv *serv,
       /* First get the current gregset.  */
       if (thread_db_getgregs (&thread_handle, gregset) != TD_OK)
 	{
-	  fprintf (stderr, "<<< ERROR set_thread_reg td_thr_getgregs %d >>>\n",
-		   thread->ti.ti_tid);
+	  fprintf (stderr,
+		   "<<< ERROR set_thread_reg td_thr_getgregs %lu >>>\n",
+		   (unsigned long) thread->ti.ti_tid);
 	  return -1;	/* fail */
 	}
       /* Now write the new reg value into the gregset. */
       if (reg_to_gregset (serv, reg, regnum, gregset) < 0)
 	{
-	  fprintf (stderr, "<<< ERROR reg_to_gregset %d %d >>>\n", 
-		   thread->ti.ti_tid, regnum);
+	  fprintf (stderr, "<<< ERROR reg_to_gregset %lu %d >>>\n", 
+		   (unsigned long) thread->ti.ti_tid, regnum);
 	  return -1;	/* fail */
 	}
       /* Now write the gregset back to the child. */
       if (thread_db_setgregs (&thread_handle, gregset) != TD_OK)
 	{
-	  fprintf (stderr, "<<< ERROR set_thread_reg td_thr_setgregs %d >>>\n",
-		   thread->ti.ti_tid);
+	  fprintf (stderr,
+		   "<<< ERROR set_thread_reg td_thr_setgregs %lu >>>\n",
+		   (unsigned long) thread->ti.ti_tid);
 	  return -1;	/* fail */
 	}
     }
